--- a/src/Taschenrechner/Taschenrechner/Taschenrechner.csproj
+++ b/src/Taschenrechner/Taschenrechner/Taschenrechner.csproj
@@ -52,6 +52,8 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="OperatorHandler.cs" />
+    <Compile Include="OperatorTypes\OperatorMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormMain.resx">
